[package]
name = "fusion-streamer"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "bin/local",
]

[dependencies]
eyre = "0.6.12"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.4"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.1.0"
futures-util = "0.3.31"
dotenv = "0.15.0"
secrecy = "0.10.3"
tracing = "0.1.41"